// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button is disabled 1`] = `
<_default>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "danger": "#f04540",
          "dangerDark": "#C43833",
          "grey": "#697782",
          "lightBlack": "#5f656b",
          "lightGray": "#F7F8F9",
          "primary": "#00CED1",
          "primaryDark": "#00a0a0",
          "text": Object {
            "danger": "white",
            "default": "#697782",
            "primary": "white",
          },
        },
        "effects": Object {
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(122,122,122,0.23)",
          },
        },
        "typography": Object {
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "lineHeightBase": 1.5,
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi-"
      jss={
        Jss {
          "generateId": [Function],
          "id": 2,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                  "onProcessSheet": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [
                [Function],
              ],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.0.0-alpha.16",
        }
      }
    >
      <JssContextSubscriber
        isDisabled={true}
        onClick={[Function]}
      >
        <WithStyles(Button)
          innerRef={null}
          isDisabled={true}
          jssContext={
            Object {
              "disableStylesGeneration": false,
              "jss": Jss {
                "generateId": [Function],
                "id": 2,
                "options": Object {
                  "Renderer": [Function],
                  "createGenerateId": [Function],
                  "plugins": Array [],
                },
                "plugins": PluginsRegistry {
                  "plugins": Object {
                    "external": Array [
                      Object {
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                        "onUpdate": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                        "onProcessSheet": [Function],
                      },
                    ],
                    "internal": Array [
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                    ],
                  },
                  "registry": Object {
                    "onChangeValue": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onCreateRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessSheet": Array [
                      [Function],
                    ],
                    "onProcessStyle": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onUpdate": Array [
                      [Function],
                    ],
                  },
                },
                "version": "10.0.0-alpha.16",
              },
              "managers": Object {
                "1": SheetsManager {
                  "length": 1,
                  "sheets": WeakMap {},
                },
              },
              "sheetOptions": Object {
                "classNamePrefix": "HoiPoi-HoiPoi-HoiPoi-HoiPoi-",
                "generateId": [Function],
              },
            }
          }
          onClick={[Function]}
          theme={
            Object {
              "colors": Object {
                "danger": "#f04540",
                "dangerDark": "#C43833",
                "grey": "#697782",
                "lightBlack": "#5f656b",
                "lightGray": "#F7F8F9",
                "primary": "#00CED1",
                "primaryDark": "#00a0a0",
                "text": Object {
                  "danger": "white",
                  "default": "#697782",
                  "primary": "white",
                },
              },
              "effects": Object {
                "buttonActive": Object {
                  "boxShadow": "inset 0 -2px 4px 0 rgba(122,122,122,0.23)",
                },
              },
              "typography": Object {
                "button": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "lineHeight": 1.5,
                },
                "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSizeBase": 13,
                "lineHeightBase": 1.5,
              },
            }
          }
        >
          <Button
            classes={
              Object {
                "big": "HoiPoi-HoiPoi-HoiPoi-HoiPoi-Button-big-0-2-46",
                "danger": "HoiPoi-HoiPoi-HoiPoi-HoiPoi-Button-danger-0-2-44",
                "disabled": "HoiPoi-HoiPoi-HoiPoi-HoiPoi-Button-disabled-0-2-47",
                "fullWidth": "HoiPoi-HoiPoi-HoiPoi-HoiPoi-Button-fullWidth-0-2-48",
                "label": "HoiPoi-HoiPoi-HoiPoi-HoiPoi-Button-label-0-2-38",
                "labelLoading": "HoiPoi-HoiPoi-HoiPoi-HoiPoi-Button-labelLoading-0-2-39",
                "loader": "HoiPoi-HoiPoi-HoiPoi-HoiPoi-Button-loader-0-2-40",
                "outlined": "HoiPoi-HoiPoi-HoiPoi-HoiPoi-Button-outlined-0-2-41",
                "primary": "HoiPoi-HoiPoi-HoiPoi-HoiPoi-Button-primary-0-2-43",
                "root": "HoiPoi-HoiPoi-HoiPoi-HoiPoi-Button-root-0-2-37",
                "small": "HoiPoi-HoiPoi-HoiPoi-HoiPoi-Button-small-0-2-45",
                "white": "HoiPoi-HoiPoi-HoiPoi-HoiPoi-Button-white-0-2-42",
              }
            }
            isDisabled={true}
            onClick={[Function]}
          >
            <button
              className="HoiPoi-HoiPoi-HoiPoi-HoiPoi-Button-root-0-2-37 undefined HoiPoi-HoiPoi-HoiPoi-HoiPoi-Button-white-0-2-42 HoiPoi-HoiPoi-HoiPoi-HoiPoi-Button-disabled-0-2-47"
              onClick={null}
            >
              <span
                className=""
              >
                <span
                  className="HoiPoi-HoiPoi-HoiPoi-HoiPoi-Button-label-0-2-38"
                >
                  Hello
                </span>
              </span>
            </button>
          </Button>
        </WithStyles(Button)>
      </JssContextSubscriber>
    </JssProvider>
  </ThemeProvider>
</_default>
`;

exports[`Button is rendered as a link 1`] = `
<_default>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "danger": "#f04540",
          "dangerDark": "#C43833",
          "grey": "#697782",
          "lightBlack": "#5f656b",
          "lightGray": "#F7F8F9",
          "primary": "#00CED1",
          "primaryDark": "#00a0a0",
          "text": Object {
            "danger": "white",
            "default": "#697782",
            "primary": "white",
          },
        },
        "effects": Object {
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(122,122,122,0.23)",
          },
        },
        "typography": Object {
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "lineHeightBase": 1.5,
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi-"
      jss={
        Jss {
          "generateId": [Function],
          "id": 2,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                  "onProcessSheet": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [
                [Function],
              ],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.0.0-alpha.16",
        }
      }
    >
      <JssContextSubscriber
        href="https://hello.com"
      >
        <WithStyles(Button)
          href="https://hello.com"
          innerRef={null}
          jssContext={
            Object {
              "disableStylesGeneration": false,
              "jss": Jss {
                "generateId": [Function],
                "id": 2,
                "options": Object {
                  "Renderer": [Function],
                  "createGenerateId": [Function],
                  "plugins": Array [],
                },
                "plugins": PluginsRegistry {
                  "plugins": Object {
                    "external": Array [
                      Object {
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                        "onUpdate": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                        "onProcessSheet": [Function],
                      },
                    ],
                    "internal": Array [
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                    ],
                  },
                  "registry": Object {
                    "onChangeValue": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onCreateRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessSheet": Array [
                      [Function],
                    ],
                    "onProcessStyle": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onUpdate": Array [
                      [Function],
                    ],
                  },
                },
                "version": "10.0.0-alpha.16",
              },
              "managers": Object {
                "1": SheetsManager {
                  "length": 1,
                  "sheets": WeakMap {},
                },
              },
              "sheetOptions": Object {
                "classNamePrefix": "HoiPoi-HoiPoi-HoiPoi-",
                "generateId": [Function],
              },
            }
          }
          theme={
            Object {
              "colors": Object {
                "danger": "#f04540",
                "dangerDark": "#C43833",
                "grey": "#697782",
                "lightBlack": "#5f656b",
                "lightGray": "#F7F8F9",
                "primary": "#00CED1",
                "primaryDark": "#00a0a0",
                "text": Object {
                  "danger": "white",
                  "default": "#697782",
                  "primary": "white",
                },
              },
              "effects": Object {
                "buttonActive": Object {
                  "boxShadow": "inset 0 -2px 4px 0 rgba(122,122,122,0.23)",
                },
              },
              "typography": Object {
                "button": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "lineHeight": 1.5,
                },
                "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSizeBase": 13,
                "lineHeightBase": 1.5,
              },
            }
          }
        >
          <Button
            classes={
              Object {
                "big": "HoiPoi-HoiPoi-HoiPoi-Button-big-0-2-34",
                "danger": "HoiPoi-HoiPoi-HoiPoi-Button-danger-0-2-32",
                "disabled": "HoiPoi-HoiPoi-HoiPoi-Button-disabled-0-2-35",
                "fullWidth": "HoiPoi-HoiPoi-HoiPoi-Button-fullWidth-0-2-36",
                "label": "HoiPoi-HoiPoi-HoiPoi-Button-label-0-2-26",
                "labelLoading": "HoiPoi-HoiPoi-HoiPoi-Button-labelLoading-0-2-27",
                "loader": "HoiPoi-HoiPoi-HoiPoi-Button-loader-0-2-28",
                "outlined": "HoiPoi-HoiPoi-HoiPoi-Button-outlined-0-2-29",
                "primary": "HoiPoi-HoiPoi-HoiPoi-Button-primary-0-2-31",
                "root": "HoiPoi-HoiPoi-HoiPoi-Button-root-0-2-25",
                "small": "HoiPoi-HoiPoi-HoiPoi-Button-small-0-2-33",
                "white": "HoiPoi-HoiPoi-HoiPoi-Button-white-0-2-30",
              }
            }
            href="https://hello.com"
          >
            <a
              className="HoiPoi-HoiPoi-HoiPoi-Button-root-0-2-25 undefined HoiPoi-HoiPoi-HoiPoi-Button-white-0-2-30"
              href="https://hello.com"
            >
              <span
                className=""
              >
                <span
                  className="HoiPoi-HoiPoi-HoiPoi-Button-label-0-2-26"
                >
                  Hello
                </span>
              </span>
            </a>
          </Button>
        </WithStyles(Button)>
      </JssContextSubscriber>
    </JssProvider>
  </ThemeProvider>
</_default>
`;

exports[`Button is rendered combining props 1`] = `
<_default>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "danger": "#f04540",
          "dangerDark": "#C43833",
          "grey": "#697782",
          "lightBlack": "#5f656b",
          "lightGray": "#F7F8F9",
          "primary": "#00CED1",
          "primaryDark": "#00a0a0",
          "text": Object {
            "danger": "white",
            "default": "#697782",
            "primary": "white",
          },
        },
        "effects": Object {
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(122,122,122,0.23)",
          },
        },
        "typography": Object {
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "lineHeightBase": 1.5,
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi-"
      jss={
        Jss {
          "generateId": [Function],
          "id": 2,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                  "onProcessSheet": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [
                [Function],
              ],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.0.0-alpha.16",
        }
      }
    >
      <JssContextSubscriber
        color="danger"
        size="big"
        type="outlined"
      >
        <WithStyles(Button)
          color="danger"
          innerRef={null}
          jssContext={
            Object {
              "disableStylesGeneration": false,
              "jss": Jss {
                "generateId": [Function],
                "id": 2,
                "options": Object {
                  "Renderer": [Function],
                  "createGenerateId": [Function],
                  "plugins": Array [],
                },
                "plugins": PluginsRegistry {
                  "plugins": Object {
                    "external": Array [
                      Object {
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                        "onUpdate": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                        "onProcessSheet": [Function],
                      },
                    ],
                    "internal": Array [
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                    ],
                  },
                  "registry": Object {
                    "onChangeValue": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onCreateRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessSheet": Array [
                      [Function],
                    ],
                    "onProcessStyle": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onUpdate": Array [
                      [Function],
                    ],
                  },
                },
                "version": "10.0.0-alpha.16",
              },
              "managers": Object {
                "1": SheetsManager {
                  "length": 1,
                  "sheets": WeakMap {},
                },
              },
              "sheetOptions": Object {
                "classNamePrefix": "HoiPoi-HoiPoi-",
                "generateId": [Function],
              },
            }
          }
          size="big"
          theme={
            Object {
              "colors": Object {
                "danger": "#f04540",
                "dangerDark": "#C43833",
                "grey": "#697782",
                "lightBlack": "#5f656b",
                "lightGray": "#F7F8F9",
                "primary": "#00CED1",
                "primaryDark": "#00a0a0",
                "text": Object {
                  "danger": "white",
                  "default": "#697782",
                  "primary": "white",
                },
              },
              "effects": Object {
                "buttonActive": Object {
                  "boxShadow": "inset 0 -2px 4px 0 rgba(122,122,122,0.23)",
                },
              },
              "typography": Object {
                "button": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "lineHeight": 1.5,
                },
                "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSizeBase": 13,
                "lineHeightBase": 1.5,
              },
            }
          }
          type="outlined"
        >
          <Button
            classes={
              Object {
                "big": "HoiPoi-HoiPoi-Button-big-0-2-22",
                "danger": "HoiPoi-HoiPoi-Button-danger-0-2-20",
                "disabled": "HoiPoi-HoiPoi-Button-disabled-0-2-23",
                "fullWidth": "HoiPoi-HoiPoi-Button-fullWidth-0-2-24",
                "label": "HoiPoi-HoiPoi-Button-label-0-2-14",
                "labelLoading": "HoiPoi-HoiPoi-Button-labelLoading-0-2-15",
                "loader": "HoiPoi-HoiPoi-Button-loader-0-2-16",
                "outlined": "HoiPoi-HoiPoi-Button-outlined-0-2-17",
                "primary": "HoiPoi-HoiPoi-Button-primary-0-2-19",
                "root": "HoiPoi-HoiPoi-Button-root-0-2-13",
                "small": "HoiPoi-HoiPoi-Button-small-0-2-21",
                "white": "HoiPoi-HoiPoi-Button-white-0-2-18",
              }
            }
            color="danger"
            size="big"
            type="outlined"
          >
            <button
              className="HoiPoi-HoiPoi-Button-root-0-2-13 HoiPoi-HoiPoi-Button-outlined-0-2-17 HoiPoi-HoiPoi-Button-danger-0-2-20 HoiPoi-HoiPoi-Button-big-0-2-22"
            >
              <span
                className=""
              >
                <span
                  className="HoiPoi-HoiPoi-Button-label-0-2-14"
                >
                  ACTION
                </span>
              </span>
            </button>
          </Button>
        </WithStyles(Button)>
      </JssContextSubscriber>
    </JssProvider>
  </ThemeProvider>
</_default>
`;

exports[`Button is rendered without crashes 1`] = `
<_default>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "danger": "#f04540",
          "dangerDark": "#C43833",
          "grey": "#697782",
          "lightBlack": "#5f656b",
          "lightGray": "#F7F8F9",
          "primary": "#00CED1",
          "primaryDark": "#00a0a0",
          "text": Object {
            "danger": "white",
            "default": "#697782",
            "primary": "white",
          },
        },
        "effects": Object {
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(122,122,122,0.23)",
          },
        },
        "typography": Object {
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "lineHeightBase": 1.5,
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi-"
      jss={
        Jss {
          "generateId": [Function],
          "id": 2,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                  "onProcessSheet": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [
                [Function],
              ],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.0.0-alpha.16",
        }
      }
    >
      <JssContextSubscriber>
        <WithStyles(Button)
          innerRef={null}
          jssContext={
            Object {
              "disableStylesGeneration": false,
              "jss": Jss {
                "generateId": [Function],
                "id": 2,
                "options": Object {
                  "Renderer": [Function],
                  "createGenerateId": [Function],
                  "plugins": Array [],
                },
                "plugins": PluginsRegistry {
                  "plugins": Object {
                    "external": Array [
                      Object {
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                        "onUpdate": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                        "onProcessSheet": [Function],
                      },
                    ],
                    "internal": Array [
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                    ],
                  },
                  "registry": Object {
                    "onChangeValue": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onCreateRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessSheet": Array [
                      [Function],
                    ],
                    "onProcessStyle": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onUpdate": Array [
                      [Function],
                    ],
                  },
                },
                "version": "10.0.0-alpha.16",
              },
              "managers": Object {
                "1": SheetsManager {
                  "length": 1,
                  "sheets": WeakMap {},
                },
              },
              "sheetOptions": Object {
                "classNamePrefix": "HoiPoi-",
                "generateId": [Function],
              },
            }
          }
          theme={
            Object {
              "colors": Object {
                "danger": "#f04540",
                "dangerDark": "#C43833",
                "grey": "#697782",
                "lightBlack": "#5f656b",
                "lightGray": "#F7F8F9",
                "primary": "#00CED1",
                "primaryDark": "#00a0a0",
                "text": Object {
                  "danger": "white",
                  "default": "#697782",
                  "primary": "white",
                },
              },
              "effects": Object {
                "buttonActive": Object {
                  "boxShadow": "inset 0 -2px 4px 0 rgba(122,122,122,0.23)",
                },
              },
              "typography": Object {
                "button": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "lineHeight": 1.5,
                },
                "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSizeBase": 13,
                "lineHeightBase": 1.5,
              },
            }
          }
        >
          <Button
            classes={
              Object {
                "big": "HoiPoi-Button-big-0-2-10",
                "danger": "HoiPoi-Button-danger-0-2-8",
                "disabled": "HoiPoi-Button-disabled-0-2-11",
                "fullWidth": "HoiPoi-Button-fullWidth-0-2-12",
                "label": "HoiPoi-Button-label-0-2-2",
                "labelLoading": "HoiPoi-Button-labelLoading-0-2-3",
                "loader": "HoiPoi-Button-loader-0-2-4",
                "outlined": "HoiPoi-Button-outlined-0-2-5",
                "primary": "HoiPoi-Button-primary-0-2-7",
                "root": "HoiPoi-Button-root-0-2-1",
                "small": "HoiPoi-Button-small-0-2-9",
                "white": "HoiPoi-Button-white-0-2-6",
              }
            }
          >
            <button
              className="HoiPoi-Button-root-0-2-1 undefined HoiPoi-Button-white-0-2-6"
            >
              <span
                className=""
              >
                <span
                  className="HoiPoi-Button-label-0-2-2"
                >
                  Hello
                </span>
              </span>
            </button>
          </Button>
        </WithStyles(Button)>
      </JssContextSubscriber>
    </JssProvider>
  </ThemeProvider>
</_default>
`;
